Authorization with username and password in request body

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
-app.security.username=yourUsername
-app.security.password=yourPassword
-
-rsa.private-key=classpath:certs/private.pem
-rsa.public-key=classpath:certs/public.pem
+app.security.username=username
+app.security.password=password
