--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.sql.init.mode=always
 
 app.security.username=username
 app.security.password=password
+
+spring.docker.compose.file=docker-compose.yaml
