--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,9 @@
+version: '3.8'
 services:
-  h2:
-    image: 'buildo/h2database'
+  wallet:
+    container_name: walletApi
     ports:
-      - 8082
+      - "8080:8080"
+    build:
+      context: .
+      dockerfile: Dockerfile
