--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url= jdbc:h2:tcp://localhost/~/test
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -12,5 +14,3 @@ spring.sql.init.mode=always
 
 app.security.username=username
 app.security.password=password
-
-spring.docker.compose.file=docker-compose.yaml
