--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/wallet
 #spring.datasource.username=root
-#spring.datasource.password=&m60473R#
+#spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
